apps/media/searxng-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  namespace: media
  annotations:
    external-dns: external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  ingressClassName: traefik
  rules:
    - host: search.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  name: http
